# localnative

./: .gitignore  .gitlab-ci.yml  .mrconfig-template  CLAUDE.md  README  README.md
.github/workflows/: deploy-production-to-google-play.yml  deploy-production.yml  localnative-tauri.yml
localnative-android/: .gitignore  build.gradle  gradle.properties
localnative-android/app/: build.gradle
localnative-app-mdbook/: README.md  book.toml
localnative-app-mdbook/src/: SUMMARY.md  changelog.md  developer-setup.md  index.md  license.md  localnative-app.md  privacy-policy.md  quick-start.md  release.md  source-code.md  todo.md  videos.md
localnative-browser-extension/: .gitignore
localnative-browser-extension/app/: contentScript.js  i18n.js  manifest.json  popup-i18n.js  popup.html  popup.js  sanitizer.js
localnative-browser-extension/host/: regedit.reg
localnative-browser-extension/wasm-app/: Cargo.toml  Trunk.toml  build.rs  content_script.js  index.html  init.js  manifest.json
localnative-browser-extension/wasm-app/locales/en/: tr.ftl
localnative-browser-extension/wasm-app/locales/zh/: tr.ftl
localnative-browser-extension/wasm-app/src/: connect.rs  locales.rs  main.rs
localnative-docker/: .gitignore  Dockerfile  build.sh  run.sh
localnative-electron/: .gitignore  electron-builder.yaml  embedded.provisionprofile  index.html  package.json  renderer.js
localnative-electron/resources/: app.icns
localnative-electron/src/: chart.js  cmd.js  ctrl.js  i18n.js  index.html  main.js  renderer.js  server.html
localnative-flutter/: .gitignore  ARCHITECTURE.md  Makefile  README.md  SETUP.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
localnative-flutter/rust/: Cargo.toml  build.rs
localnative-flutter/rust/src/: lib.rs
localnative-ios/: .gitignore  LocalNative-Bridging-Header.h  Podfile  README.txt  RustLocalNative.swift  localnative-ios.entitlements
localnative-neon/: .gitignore  README.md  package-lock.json  package.json
localnative-neon/native/: Cargo.toml
localnative-neon/native/src/: lib.rs
localnative-nodejs/: .gitignore  README.md  list.js  main.js  package.json  publish.js  send.js  ssbify-bom.js  ssbify.js  tail.js  whoami.js
localnative-rs/: .gitignore  Cargo.toml  README.md  build_linux.sh  bundler.json  fleet.toml
localnative-rs/.cargo/: config
localnative-rs/icons/: LICENSE  app.icns
localnative-rs/locales/en-US/: tr.ftl
localnative-rs/locales/zh-CN/: tr.ftl
localnative-rs/localnative_bundle/: Cargo.toml
localnative-rs/localnative_bundle/src/: main.rs
localnative-rs/localnative_cli/: Cargo.toml
localnative-rs/localnative_core/: .gitignore  Cargo.toml
localnative-rs/localnative_core/src/: cmd.rs  db.rs  error.rs  exe.rs  lib.rs  localnative-core.h  rpc.rs  sql.rs  upgrade.rs
localnative-rs/localnative_core/src/cmd/: filter.rs  image.rs  mod.rs  search.rs  select.rs  sync.rs  utils.rs
localnative-rs/localnative_core/src/rpc/: client.rs  mod.rs  server.rs
localnative-rs/localnative_core/src/ssb/: mod.rs  sync.rs
localnative-rs/localnative_core/src/upgrade/: mod.rs  to_0_4_0.rs  to_0_5_0.rs  utils.rs
localnative-rs/localnative_core/tests/: ssb_sync_test.rs  ssb_sync_test_2.rs  ssbify_string_test.rs  tags_test.rs
localnative-rs/localnative_db/: Cargo.toml
localnative-rs/localnative_db/src/: lib.rs
localnative-rs/localnative_db/src/entity/: comments.rs  mod.rs  notes.rs  notes_comments.rs  prelude.rs
localnative-rs/localnative_db/src/migration/: m20220101_000001_create_table.rs  mod.rs
localnative-rs/localnative_db/src/old_entity/: meta.rs  mod.rs  note.rs  prelude.rs
localnative-rs/localnative_druid/: Cargo.toml
localnative-rs/localnative_druid/src/: main.rs
localnative-rs/localnative_iced/: Cargo.toml
localnative-rs/localnative_iced/locales/en-US/: tr.ftl
localnative-rs/localnative_iced/locales/zh-CN/: tr.ftl
localnative-rs/localnative_iced/previews/: chart.rs  days.rs  noteview.rs  search_page.rs  tagview.rs
localnative-rs/localnative_iced/src/: bin.rs  chart.rs  config.rs  data_view.rs  days.rs  db_operations.rs  delete_tip.rs  helper.rs  icons.rs  init.rs  lib.rs  localization.rs  logger.rs  main.rs  middle_date.rs  note.rs  page_bar.rs  search_bar.rs  search_page.rs  setting_board.rs  setting_view.rs  settings.rs  sidebar.rs  style.rs  sync.rs  tags.rs  translate.rs  wrap.rs
localnative-rs/localnative_iced/src/note/: editable.rs  mod.rs  tag.rs
localnative-rs/localnative_iced/src/style/: icon.rs  mod.rs  qr_code.rs  symbol.rs  tag.rs  url.rs
localnative-rs/localnative_iced_old/: Cargo.toml
localnative-rs/localnative_iced_old/src/: days.rs  main.rs  page_bar.rs  setting_view.rs  tags.rs  translate.rs  wrap.rs
localnative-rs/localnative_iced_old/src/note/: editable.rs
localnative-rs/localnative_iced_old/src/style/: icon.rs
localnative-rs/localnative_ssb/: Cargo.toml
localnative-rs/localnative_ssb/src/: lib.rs  sync.rs
localnative-rs/localnative_ssb/tests/: ssb_sync_test.rs  ssb_sync_test_2.rs  ssbify_string_test.rs
localnative-rs/localnative_sync/: Cargo.toml
localnative-rs/localnative_sync/src/: lib.rs  session.rs
localnative-rs/localnative_upgrade/: Cargo.toml
localnative-rs/localnative_upgrade/src/: lib.rs  to_0_4_0.rs  utils.rs
localnative-rs/templates/: main.wxs
localnative-rs/xtask/: Cargo.toml
localnative-rs/xtask/src/: flags.rs  main.rs  ndkbd.rs  release.rs
localnative-sql/: migrate-from-0.1.5-to-0.2.0.sql  migrate-from-0.3.10-to-0.4.0.sql
localnative-tauri/: README.md  package.json  pnpm-lock.yaml
localnative_tauri/: package.json
script/: build-android-gnu-linux.sh  build-android-mac-2.sh  build-android-mac.sh  build-ios.sh  build_linux.sh  pkg-nodejs  release  release-appimage  release-appimage-p2  release-browser-extension  release-electron-appimage  release-electron-mac  release-iced-mac  release-mac  release-mac-electron  release-msi-win  release-web-ext-host  release-web-ext-host-exe  release-web-ext-host-gnu-linux  release-web-ext-host-mac  release-web-ext-host-win  set-version  set-version-electron
(+158 files in other folders)
