[workspace]
members = ["localnative_iced", "localnative_core", "xtask"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
xshell = "0.2"
xflags = "0.3"
tauri-bundler = "1.1"
clap = { version = "4", features = ["cargo"] }
# rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
linked_hash_set = "0.1"
regex = "1.7"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "serde-human-readable",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
semver = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"
tarpc = { version = "0.34", features = ["full"] }
get_if_addrs = "0.5"
thiserror = "1.0"
open = "5.3"
image = "0.25"
num-traits = "0.2"
fluent-bundle = "0.15"
once_cell = "1"
unic-langid = { version = "0.9", features = ["macros"] }
elsa = "1"
intl-memoizer = "0.5"
fern = "0.6"
tinyfiledialogs = "3"
ouroboros = "0.18"
palette = "0.7"
chrono = { version = "0.4", default-features = false }
plotters-iced = "0.10"
plotters = { version = "0.3", features = ["histogram"] }
rand = "0.8"
iced_aw = { version = "0.9.3", default-features = false, features = [
    "wrap",
    "number_input",
    "modal",
    "icons",
    "card",
] }
iced = { version = "0.12", features = [
    "canvas",
    "qr_code",
    "tokio",
    "palette",
] }
iced_runtime = { version = "0.12" }
winreg = "0.52"
jni = { version = "0.21", default-features = false }
hex = "0.4"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"

[patch.crates-io]
tarpc = { git = "https://github.com/google/tarpc.git" }
