[package]
name = "localnative_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
localnative_core = { path = "../../localnative-rs/localnative_core" }
flutter_rust_bridge = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"
