[package]
name = "localnative-neon"
version = "0.4.2"
authors = ["Yi Wang"]
license = "AGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "localnative_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"

[dependencies.localnative_core]
version = "0.4.2"
path = "../../localnative-rs/localnative_core"
