[package]
name = "localnative-neon"
version = "0.5.0"
authors = ["Yi Wang"]
license = "AGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "localnative_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.8"

[dependencies]
neon = "0.8"

[dependencies.localnative_core]
version = "0.5.0"
path = "../../localnative-rs/localnative_core"
