[package]
name = "localnative_bundle"
version = "0.1.0"
authors = ["Cupnfish <yrainbxqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-bundler = { git = "https://github.com/tauri-apps/tauri.git"}
directories-next = "2"
anyhow = "1"
serde = {version = "1",features = ["derive"]}
serde_json = "1"
