[package]
name = "localnative_cli"
description = "localnative app command line utility"
homepage = "https://localnative.app"
version = "0.3.2"
authors = ["Yi Wang"]
license = "AGPL-3.0"

[dependencies.localnative_core]
version = "0.3.2"
path = "../localnative_core"

[dependencies.localnative_ssb]
version = "0.3.2"
path = "../localnative_ssb"


