[package]
name = "localnative_cli"
description = "localnative app command line utility"
homepage = "https://localnative.app"
version = "0.4.0"
authors = ["Yi Wang"]
license = "AGPL-3.0"

[dependencies.localnative_core]
path = "../localnative_core"

[dependencies.localnative_ssb]
path = "../localnative_ssb"


