[package]
name = "localnative_cli"
description = "localnative app command line utility"
homepage = "https://localnative.app"
version = "0.6.0"
authors = ["Yi Wang"]
license = "AGPL-3.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["cargo"] }
localnative_core = { path = "../localnative_core" }
