[package]
name = "localnative_core"
description = "localnative core lib"
homepage = "https://localnative.app"
authors = ["Yi Wang"]
version = "0.4.2"
license = "AGPL-3.0"
edition = "2018"
[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[dependencies]
linked_hash_set = "0.1.4"
regex = "1"
time = {version = "0.3.0-alpha-0",features = ["formatting","macros"]}
serde = {version = "1",features = ["derive"]}
serde_json = "1"
dirs = "3"
base64 = "0.13"
rustc-serialize = "0.3.24"
uuid = { version = "0.8", features = ["v4"] }
semver = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
futures = "0.3"
tarpc = { version = "0.26", features = ["full"]}
get_if_addrs = "0.5.3"
stream-cancel = "0.8"

[lib]
name = "localnative_core"
# android only need this
# crate-type = ["cdylib"]
# ios works as below
# crate-type = ["staticlib"]
