[package]
name = "localnative_core"
description = "localnative core lib"
homepage = "https://localnative.app"
authors = ["Yi Wang"]
version = "0.6.0"
license = "AGPL-3.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { workspace = true, default-features = false }

[dependencies]
linked_hash_set = { workspace = true }
regex = { workspace = true }
time = { workspace = true, features = ["formatting", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
semver = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }
futures = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
get_if_addrs = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
tracing = { workspace = true }
chrono = { workspace = true, default-features = false }

[lib]
name = "localnative_core"
crate-type = ["rlib", "cdylib", "staticlib"]


[features]
default = []
no_print = []
