[package]
name = "localnative_iced"
version = "0.6.1"
authors = ["Cupnfish <yrainbxqc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localnative_core = { path = "../localnative_core", features = ["no_print"] }
open = "4"
image = "0.24"

# -- impl tags start --
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- impl tags end --

iced_style = "0.8"
num-traits = "0.2"
iced_native = "0.10"
iced_graphics = { version = "0.8", features = ["font-source"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }

# -- impl lang start --
fluent-bundle = "0.15"
once_cell = "1"
unic-langid = { version = "0.9", features = ["macros"] }
elsa = "1"
intl-memoizer = "0.5"
fern = "0.6"
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
# -- impl lang end --

# -- impl ip input start --
regex = "1.7"
tinyfiledialogs = "3"
# -- impl ip input end --
anyhow = "1"

ouroboros = "0.15"

palette = "0.7"

chrono = { version = "0.4", default-features = false }

plotters-iced = "0.8"
plotters = { version = "0.3", features = ["histogram"] }

# -- impl init start --
[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.50"
# -- impl init end --


[dependencies.rand]
version = "0.8"
optional = true

[dependencies.iced_aw]
version = "^0.5.0"
git = "https://github.com/iced-rs/iced_aw.git"
branch = "main"
default-features = false
features = ["wrap", "number_input", "modal", "icons", "card"]


[dependencies.iced]
version = "0.9"
features = ["canvas", "qr_code", "tokio", "palette"]

[features]
preview = ["rand"]

[[bin]]
name = "localnative_iced"
path = "./src/bin.rs"

[[bin]]
name = "preview-example"
path = "./previews/example.rs"
required-features = ["preview"]

[[bin]]
name = "noteview"
path = "./previews/noteview.rs"
required-features = ["preview"]

[[bin]]
name = "tagview"
path = "./previews/tagview.rs"
required-features = ["preview"]

[[bin]]
name = "search_page"
path = "./previews/search_page.rs"
required-features = ["preview"]

[[bin]]
name = "chart"
path = "./previews/days.rs"
required-features = ["preview"]

[[bin]]
name = "newchart"
path = "./previews/chart.rs"
required-features = ["preview"]
