[package]
name = "localnative_iced"
version = "0.6.1"
authors = ["Cupnfish <yrainbxqc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localnative_core = { path = "../localnative_core", features = ["no_print"] }
open = "5"
image = "0.24"

# -- impl tags start --
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# -- impl tags end --

iced_style = "0.9"
num-traits = "0.2"
iced_graphics = { version = "0.9" }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }

# -- impl lang start --
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
elsa = "1"
intl-memoizer = "0.5"
fern = "0.6"
tokio = { workspace = true, features = ["fs", "io-util", "macros"] }
# -- impl lang end --

# -- impl ip input start --
regex = "1.9"
tinyfiledialogs = "3"
# -- impl ip input end --
anyhow = "1"

ouroboros = "0.17"

palette = "0.7"

chrono = { workspace = true, default-features = false }

plotters-iced = "0.9"
plotters = { version = "0.3", features = ["histogram"] }

# -- impl init start --
[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.50"
# -- impl init end --


[dependencies.rand]
version = "0.8"
optional = true

[dependencies.iced_aw]
version = "0.6"
default-features = false
features = ["wrap", "number_input", "modal", "icons", "card"]


[dependencies.iced]
version = "0.10"
features = ["canvas", "qr_code", "tokio", "palette"]

[features]
preview = ["rand"]

[[bin]]
name = "localnative_iced"
path = "./src/bin.rs"

[[bin]]
name = "preview-example"
path = "./previews/example.rs"
required-features = ["preview"]

[[bin]]
name = "noteview"
path = "./previews/noteview.rs"
required-features = ["preview"]

[[bin]]
name = "tagview"
path = "./previews/tagview.rs"
required-features = ["preview"]

[[bin]]
name = "search_page"
path = "./previews/search_page.rs"
required-features = ["preview"]

[[bin]]
name = "newchart"
path = "./previews/chart.rs"
required-features = ["preview"]
