[package]
name = "localnative_iced"
version = "0.7.0"
authors = ["Cupnfish <cupnfish@icloud.com>"]
edition = "2021"

[dependencies]
localnative_core = { path = "../localnative_core" }
tracing = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num-traits = { workspace = true }
time = { workspace = true, features = ["serde-human-readable", "macros"] }
fluent-bundle = { workspace = true }
once_cell = { workspace = true }
unic-langid = { workspace = true, features = ["macros"] }
elsa = { workspace = true }
intl-memoizer = { workspace = true }
fern = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros"] }
regex = { workspace = true }
tinyfiledialogs = { workspace = true }
anyhow = { workspace = true }
ouroboros = { workspace = true }
palette = { workspace = true }
chrono = { workspace = true, default-features = false }
plotters-iced = { workspace = true }
plotters = { workspace = true, features = ["histogram"] }
iced_runtime = { workspace = true }
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
rand = { workspace = true, optional = true }
iced_aw = { workspace = true, default-features = false, features = [
    "wrap",
    "number_input",
    "modal",
    "icons",
    "card",
] }
iced = { workspace = true, features = [
    "canvas",
    "qr_code",
    "tokio",
    "palette",
] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }


[target."cfg(target_os = \"windows\")".dependencies]
winreg = { workspace = true }

[features]
preview = ["rand"]

[[bin]]
name = "localnative_iced"
path = "./src/bin.rs"

[[bin]]
name = "preview-example"
path = "./previews/example.rs"
required-features = ["preview"]

[[bin]]
name = "noteview"
path = "./previews/noteview.rs"
required-features = ["preview"]

[[bin]]
name = "tagview"
path = "./previews/tagview.rs"
required-features = ["preview"]

[[bin]]
name = "search_page"
path = "./previews/search_page.rs"
required-features = ["preview"]

[[bin]]
name = "chart"
path = "./previews/days.rs"
required-features = ["preview"]

[[bin]]
name = "newchart"
path = "./previews/chart.rs"
required-features = ["preview"]
