[package]
name = "localnative_iced_old"
version = "0.5.0"
authors = ["Cupnfish <yrainbxqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1",features = ["derive"]}
serde_json = "1"
tokio = {version = "1",features = ["fs","io-util","macros"]}
directories-next = "2"
localnative_core = { path = "../localnative_core" }
thiserror = "1"
anyhow = "1"
open = "1"
chrono = "0.4"
iced_native = { git = "https://github.com/hecrj/iced.git" }
iced_graphics = { git = "https://github.com/hecrj/iced.git" }
once_cell = "1.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
fern = "0.6"
uuid = { version = "0.8", features = ["v4"] }
image = "0.23"
native-dialog = "0.5"
fluent-bundle = "0.15"
unic-langid = { version = "0.9",features = ["macros"] }
elsa = "1.4"
intl-memoizer = "0.5"

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.8"

[dependencies.iced]
git = "https://github.com/hecrj/iced.git"
default-features = false

[dependencies.dotenv]
version = "0.15"
optional = true

[features]
default = ["opengl"]
wgpu = [
    "iced/default",
    "iced/tokio",
    "iced/qr_code",
    "iced/canvas",
    "dotenv"
    ]
opengl = [
    "iced/glow",
    "iced/tokio",
    "iced/glow_qr_code",
    "iced/glow_canvas",
    "iced/glow_default_system_font"
    ]