[package]
name = "localnative_ssb"
description = "localnative ssb lib"
homepage = "https://localnative.app"
authors = ["Yi Wang"]
version = "0.4.1"
license = "AGPL-3.0"

[dependencies]
serde_json = "1.0.33"
uuid = "0.7.4"

[dependencies.localnative_core]
path = "../localnative_core"

[dev-dependencies]
time = "0.1.41"

[lib]
name = "localnative_ssb"
