[package]
name = "localnative_sync"
description = "localnative sync lib"
homepage = "https://localnative.app"
authors = ["Yi Wang"]
version = "0.4.0"
license = "AGPL-3.0"

[dependencies.rusqlite]
version = "0.19.0"
feature = ["bundled"]

[lib]
name = "localnative_sync"
crate-type = ["lib"]

[dependencies]
hyper = "0.12"
reqwest = "0.9.18"

