[package]
name = "localnative_upgrade"
description = "localnative upgrade lib"
homepage = "https://localnative.app"
authors = ["Yi Wang"]
version = "0.4.0"
license = "AGPL-3.0"

[dependencies.rusqlite]
version = "0.19.0"
feature = ["bundled"]

[dependencies]
semver = "0.9.0"
uuid = { version = "0.7.4", features = ["v4"] }

#[lib]
#name = "localnative_core"
# crate-type = ["lib"]
# crate-type = ["staticlib","lib","dylib"]
