[package]
name = "xtask"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
xshell = { workspace = true }
xflags = { workspace = true }
tauri-bundler = { workspace = true }
